ReAdded church support project

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -24,8 +24,24 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-10 col-md-offset-1">
-
+        <div class="col-md-12">
+            <div id="map"></div>
+            <script>
+              function initMap() {
+                var uluru = {lat: 40.944543, lng: -74.075419};
+                var map = new google.maps.Map(document.getElementById('map'), {
+                  zoom: 4,
+                  center: uluru
+                });
+                var marker = new google.maps.Marker({
+                  position: uluru,
+                  map: map
+                });
+              }
+            </script>
+            <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRGShR4pz6wiRVrmmQ-OtWxHAOcZG6W1g&callback=initMap">
+            </script>
         </div>
     </div>
 {% endblock %}
