--- a/media/css/base.css
+++ b/media/css/base.css
@@ -1,6 +1,3 @@
-
-
-
 .main-content {
     margin: 0 auto;
     padding-top: 40px;
@@ -24,4 +21,9 @@
     list-style-type: none;
     color: #a94442;
     padding-left: 0;
+}
+
+#map {
+    height:400px;
+    width: 100%;
 }
