--- a/templates/base.html
+++ b/templates/base.html
@@ -6,46 +6,78 @@
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
+        <link rel="stylesheet" href="{% static 'css/base.css' %}" />
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+        <script src="{% static 'js/main.js' %}"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-        <link rel="stylesheet" href="{% static "css/base.css" %}" />
     </head>
 	<body>
-		<div class="container main-content">
-			<nav class="navbar navbar-default">
-              <div class="container-fluid">
+        <nav class="navbar navbar-default navbar-static-top">
+              <div class="container">
                 <!-- Brand and toggle get grouped for better mobile display -->
-                <div class="navbar-header">
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
-                  <a class="navbar-brand" href="/">Home</a>
-                </div>
+                  <div class="row">
+                        <div class="col-md-4 col-sm-6 col-xs-8">
+                              <div class="navbar-header">
 
-                <!-- Collect the nav links, forms, and other content for toggling -->
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                  <a class="navbar-brand" href="http://www.churchsupport.org">
+                                      <img alt="Brand" id="logo" src="{% static 'img/logo1.png' %}" class="img-responsive">
+                                  </a>
 
-                  <ul class="nav navbar-nav navbar-right">
-                    <li><a href="/churchForm">Need Your Help</a></li>
-                    <li><a href="#">Want To Help</a></li>
-                    <li><a href="/login">Sign In</a></li>
-                  </ul>
-                </div><!-- /.navbar-collapse -->
+                              </div>
+                        </div>
+                        <div class="col-md-8 col-sm-6 col-xs-4">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                  </button>
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+
+                              <ul class="nav navbar-nav navbar-right">
+                                <li><a href="/">Home</a></li>
+                                <li><a href="/churchForm">Need Your Help</a></li>
+                                <li><a href="#">Want To Help</a></li>
+                                <li><a href="/login">Log In</a></li>
+                              </ul>
+                            </div><!-- /.navbar-collapse -->
+                      </div>
+                  </div>
               </div><!-- /.container-fluid -->
             </nav>
+		<div class="container main-content">
 
             {% block content %}
             {% endblock %}
 		</div>
+        <div class="row" id="footer">
+            <div class="col-md-8 col-md-offset-2" id="footer-content">
+                <div class="center">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <strong>ABOUT CSO</strong>
+                        </div>
+                    </div>
+                    <div class="row" style="margin-top:5px;">
+                        <div class="col-md-6 col-sm-8 col-xs-8">
+                            <img alt="logo" id="footer-logo" src="{% static 'img/logo1.png' %}">
+                        </div>
+                        <div class="col-md-6 col-sm-8 col-xs-8">
+                            <p><span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span> 396 Broad Ave. Leonia, NJ 07605 <br />
+                                <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span> 1-201-696-8044 <br />
+                                <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> churchsupport08@gmail.com</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
 	</body>
 </html>
