--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -42,7 +42,7 @@
               var zoom = 10;
               var marker = null;
               function setMarkers(m) {
-                
+                console.log("hello");
               }
 
               function changeCenter(lat, lng, z) {
