Finished forms and updated map

--- a/media/css/base.css
+++ b/media/css/base.css
@@ -66,3 +66,15 @@
 
 #footer-content {
 }
+
+[class^="fa-"], [class*=" fa-"] {
+    display: inline-block;
+    width: 100%;
+}
+th {
+    text-align:center;
+}
+
+td {
+    text-align:center;
+}
