--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
         <!-- Optional theme -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+        <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}" />
         <!-- Latest compiled and minified JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <script src="{% static 'js/main.js' %}"></script>
@@ -44,7 +45,7 @@
                               <ul class="nav navbar-nav navbar-right">
                                 <li><a href="/">Home</a></li>
                                 <li><a href="/churchForm">Need Your Help</a></li>
-                                <li><a href="#">Want To Help</a></li>
+                                <li><a href="/volunteerForm">Want To Help</a></li>
                                 <li><a href="/login">Log In</a></li>
                               </ul>
                             </div><!-- /.navbar-collapse -->
