--- a/templates/home/churchMinForm.html
+++ b/templates/home/churchMinForm.html
@@ -3,13 +3,13 @@
 {% block content %}
     <div class="row">
 				<div class="col-md-6 col-md-offset-3">
-					<h2>Register Your Church</h2>
+					<h2>Select Ministries</h2>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-md-offset-3">
 					<div class="jumbotron">
-                        <form action="{% url 'home:form' %}" method="post">
+                        <form action="{% url 'home:churchMinForm' id %}" method="post">
                         {% csrf_token %}
                             {% if form.non_field_errors %}
                                 <div class="row">
@@ -23,149 +23,72 @@
                             {% endif %}
                             <div class="row">
                                 <div class="col-md-12">
-                                    <h4>Account Information</h4>
+                                    <h4>Ministry Categories</h4>
                                 </div>
                             </div>
                             <br>
-                            <div class="row">
-                                <div class="form-group col-md-12 {%  if form.username.errors %}has-error has-feedback{% endif %}">
-                                    <label class="sr-only" for="username">Username (Email)</label>
-                                    <input type="text" class="form-control" name="username" id="username" placeholder="Username" {% if post %} value = "{{ post.username }}"{% endif %}>
-                                     {% if form %} {{form.username.errors }} {% endif %}
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-group col-md-6 {%  if form.password.errors %}has-error has-feedback{% endif %}">
-                                    <label class="sr-only" for="password">Password</label>
-                                    <input type="password" class="form-control" name="password" id="password" placeholder="Password" {% if post %} value = "{{ post.password }}"{% endif %}>
-                                    {% if form %} {{form.password.errors }} {% endif %}
-                                </div>
-                                <div class="form-group col-md-6 {%  if form.confirm.errors %}has-error has-feedback{% endif %}">
-                                    <label class="sr-only" for="confirmPassword">Confirm Password</label>
-                                    <input type="password" class="form-control" name="confirm" id="confirm" placeholder="Confirm Password" {% if post %} value = "{{ post.confirm }}"{% endif %}>
-                                    {% if form %} {{form.confirm.errors }} {% endif %}
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-group col-md-6  {%  if form.firstName.errors %}has-error has-feedback{% endif %}">
-                                    <label class="sr-only" for="firstName">First Name</label>
-                                    <input type="text" class="form-control" name="firstName" id="firstName" placeholder="First Name" {% if post %} value = "{{ post.firstName }}"{% endif %}>
-                                    {% if form %} {{form.firstName.errors }} {% endif %}
-                                </div>
-                                <div class="form-group col-md-6 {%  if form.lastName.errors %}has-error has-feedback{% endif %}">
-                                    <label class="sr-only" for="lastName">Last Name</label>
-                                    <input type="text" class="form-control" name="lastName" id="lastName" placeholder="Last Name" {% if post %} value = "{{ post.lastName }}"{% endif %}>
-                                    {% if form %} {{form.lastName.errors }} {% endif %}
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <h4>Church Contact Information</h4>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="row">
-                                <div class="form-group col-md-12 {%  if form.name.errors %}has-error has-feedback{% endif %}">
-                                    <label class="sr-only" for="name">Church Name</label>
-                                    <input type="text" class="form-control" name="name" id="name" placeholder="Church Name" {% if post %} value = "{{ post.name }}"{% endif %}>
-                                    {% if form %} {{form.name.errors }} {% endif %}
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-group col-md-12 {%  if form.address1.errors %}has-error has-feedback{% endif %}">
-                                    <label class="sr-only" for="address1">Address Line 1</label>
-                                    <input type="text" class="form-control" name="address1" id="address1" placeholder="Address Line 1" {% if post %} value = "{{ post.address1 }}"{% endif %}>
-                                    {% if form %} {{form.address1.errors }} {% endif %}
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-group col-md-12 {%  if form.address2.errors %}has-error has-feedback{% endif %}">
-                                    <label class="sr-only" for="address2">Address Line 2</label>
-                                    <input type="text" class="form-control" name="address2" id="address2" placeholder="Address Line 2" {% if post %} value = "{{ post.address2 }}"{% endif %}>
-                                    {% if form %} {{form.address2.errors }} {% endif %}
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-group col-md-4  {%  if form.city.errors %}has-error has-feedback{% endif %}">
-                                    <label class="sr-only" for="city">City</label>
-                                    <input type="text" class="form-control" name="city" id="city" placeholder="City" {% if post %} value = "{{ post.city }}"{% endif %}>
-                                    {% if form %} {{form.city.errors }} {% endif %}
-                                </div>
-                                <div class="form-group col-md-4 {%  if form.state.errors %}has-error has-feedback{% endif %}">
-                                    <select class="form-control" id="state" name="state">
-                                        <option value="AK">Alaska</option>
-                                        <option value="AL">Alabama</option>
-                                        <option value="AR">Arkansas</option>
-                                        <option value="AZ">Arizona</option>
-                                        <option value="CA">California</option>
-                                        <option value="CO">Colorado</option>
-                                        <option value="CT">Connecticut</option>
-                                        <option value="DC">District of Columbia</option>
-                                        <option value="DE">Delaware</option>
-                                        <option value="FL">Florida</option>
-                                        <option value="GA">Georgia</option>
-                                        <option value="HI">Hawaii</option>
-                                        <option value="IA">Iowa</option>
-                                        <option value="ID">Idaho</option>
-                                        <option value="IL">Illinois</option>
-                                        <option value="IN">Indiana</option>
-                                        <option value="KS">Kansas</option>
-                                        <option value="KY">Kentucky</option>
-                                        <option value="LA">Louisiana</option>
-                                        <option value="MA">Massachusetts</option>
-                                        <option value="MD">Maryland</option>
-                                        <option value="ME">Maine</option>
-                                        <option value="MI">Michigan</option>
-                                        <option value="MN">Minnesota</option>
-                                        <option value="MO">Missouri</option>
-                                        <option value="MS">Mississippi</option>
-                                        <option value="MT">Montana</option>
-                                        <option value="NC">North Carolina</option>
-                                        <option value="ND">North Dakota</option>
-                                        <option value="NE">Nebraska</option>
-                                        <option value="NH">New Hampshire</option>
-                                        <option value="NJ">New Jersey</option>
-                                        <option value="NM">New Mexico</option>
-                                        <option value="NV">Nevada</option>
-                                        <option value="NY">New York</option>
-                                        <option value="OH">Ohio</option>
-                                        <option value="OK">Oklahoma</option>
-                                        <option value="OR">Oregon</option>
-                                        <option value="PA">Pennsylvania</option>
-                                        <option value="PR">Puerto Rico</option>
-                                        <option value="RI">Rhode Island</option>
-                                        <option value="SC">South Carolina</option>
-                                        <option value="SD">South Dakota</option>
-                                        <option value="TN">Tennessee</option>
-                                        <option value="TX">Texas</option>
-                                        <option value="UT">Utah</option>
-                                        <option value="VA">Virginia</option>
-                                        <option value="VT">Vermont</option>
-                                        <option value="WA">Washington</option>
-                                        <option value="WI">Wisconsin</option>
-                                        <option value="WV">West Virginia</option>
-                                        <option value="WY">Wyoming</option>
-                                    </select>
-                                    {% if form %} {{form.state.errors }} {% endif %}
-                                </div>
-                                <div class="form-group col-md-4 {%  if form.zipcode.errors %}has-error has-feedback{% endif %}">
-                                    <label class="sr-only" for="zipcode">Zipcode</label>
-                                    <input type="text" class="form-control" name="zipcode" id="zipcode" placeholder="Zipcode" {% if post %} value = "{{ post.zipcode }}"{% endif %}>
-                                    {% if form %} {{form.zipcode.errors }} {% endif %}
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="form-group col-md-12 {%  if form.phone.errors %}has-error has-feedback{% endif %}">
-                                    <label class="sr-only" for="phone">Phone</label>
-                                    <input type="text" class="form-control" name="phone" id="phone" placeholder="Phone" {% if post %} value = "{{ post.phone }}"{% endif %}>
-                                    {% if form %} {{form.phone.errors }} {% endif %}
-                                </div>
-                            </div>
-
-                          <button style="float:right" type="submit" class="btn btn-default">Next</button>
+                            <fieldset id="build">
+                                <input type="hidden" name="count" id="count">
+                            </fieldset>
+                            <p><a href="#" id="add">Add another category +</a></p>
+                          <button style="float:right" type="submit" class="btn btn-default">Submit</button>
                         </form>
-
                     </div>
 				</div>
 			</div>
+            <script>
+                $(function() {
+                    var x = 0;
+                    $( "#add" ).click(function() {
+                        var d = $("<div></div>")
+                        var row= $("<div class=\"row\"></div>");
+                        var group =   $("<div class=\"form-group col-md-10\">");
+                        var select = $("<select class=\"form-control\" id=\"category\" name=\"category[" + x + "]\"></select>");
+                        var removeButton = $("<div class=\"col-md-2\"><button class=\"btn btn-danger\">Remove</button></div>");
+                        removeButton.click(function() {
+                            $(this).parent().parent().remove();
+                        });
+                        {% for min in ministries %}
+                            console.log("{{ min.id }}");
+                            select.append($("<option value=\"{{min.id}}\">{{min}}</option>"));
+                        {% endfor %}
+                        var row2 =   $("<div class=\"row\"></div>");
+                        var group2 = $("<div class=\"form-group col-md-6\"></div>");
+                        var start = $("<label for=\"start\">Start</label><input class=\"form-control\" value=\"00:00:00\" type=\"time\" name=\"start[" + x + "]\">");
+                        var group3 = $("<div class=\"form-group col-md-6\"></div>");
+                        var end = $("<label for=\"end\">End</label><input class=\"form-control\" value=\"00:00:00\" type=\"time\" name=\"end[" + x + "]\">")
+                        var row3 = $("<div class=\"row\"></div>");
+                        var group4 = $("<div class=\"form-group col-md-12\"></div>");
+                        var day = $("<select class=\"form-control\" id=\"day\" name=\"day[" + x + "]\"></select>");
+                        var row4 = $("<div class=\"row\"></div>");
+                        var group5 = $("<div class=\"form-group col-md-6\"></div>");
+                        var students = $("<label for=\"students\">Students</label><input class=\"form-control\" type=\"number\" name=\"students[" + x + "]\">");
+                        day.append($("<option value=\"0\">Sunday</option>"));
+                        day.append($("<option value=\"1\">Monday</option>"));
+                        day.append($("<option value=\"2\">Tuesday</option>"));
+                        day.append($("<option value=\"3\">Wednesday</option>"));
+                        day.append($("<option value=\"4\">Thursday</option>"));
+                        day.append($("<option value=\"5\">Friday</option>"));
+                        day.append($("<option value=\"6\">Saturday</option>"));
+                        $("#count").val(x++);
+                        group.append(select);
+                        group2.append(start);
+                        group3.append(end);
+                        group4.append(day);
+                        group5.append(students);
+                        row.append(group);
+                        row.append(removeButton);
+                        row2.append(group2);
+                        row2.append(group3);
+                        row3.append(group4);
+                        row4.append(group5);
+                        d.append(row);
+                        d.append(row2);
+                        d.append(row3);
+                        d.append(row4);
+                        $("#build").append(d);
+
+                    });
+                });
+            </script>
 {% endblock %}
