Finished Interest Page

--- a/templates/home/churchMinForm.html
+++ b/templates/home/churchMinForm.html
@@ -40,7 +40,7 @@
                 $(function() {
                     var x = 0;
                     $( "#add" ).click(function() {
-                        var d = $("<div></div>")
+                        var d = $("<div></div>");
                         var row= $("<div class=\"row\"></div>");
                         var group =   $("<div class=\"form-group col-md-10\">");
                         var select = $("<select class=\"form-control\" id=\"category\" name=\"category[" + x + "]\"></select>");
